# RefundWeave

./: .dockerignore  .env.example  .env.production.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  app.py  compose.production.yaml  compose.yaml  pyproject.toml
.chainlit/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
agent/: config.py  graph.py  interpreter.py  prompts.py  state.py  tracer.py
api/: __init__.py  chat.py  dependencies.py  errors.py  main.py  observability.py  routes.py  schemas.py  security.py
application/: __init__.py  support_service.py
data/: __init__.py  seed_db.py
deploy/: Caddyfile
domain/: __init__.py  refunds.py
frontend/: .gitignore  Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.html  app.scss  app.spec.ts  app.ts  chat-stream.service.spec.ts  chat-stream.service.ts
infrastructure/: __init__.py  database.py  models.py  repositories.py
migrations/: env.py
migrations/versions/: 20260714_0001_initial_mysql_schema.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: refundweave-overview.json
monitoring/grafana/provisioning/dashboards/: refundweave.yml
tests/: __init__.py  db_helpers.py  test_api.py  test_chat_stream.py  test_config.py  test_mysql_integration.py  test_refund_policy.py  test_secure_refund_tools.py  test_workflow.py
tools/: crm_tools.py  policy_tools.py  refund_tools.py
