[project]
name = "ai-cs-agent-langgraph"
version = "0.1.0"
description = "A policy-aware AI customer support agent built with LangGraph and Chainlit"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "chainlit>=2.11.1",
    "cryptography>=48.0.1",
    "fastapi>=0.136.3",
    "langchain-core>=1.4.6",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "pydantic>=2.13.4",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.50",
]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "mysql: requires the disposable MySQL integration-test container",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
